@@ -1,5 +1,7 @@
 2001-02-01  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Frame/CGS4.pm (inout): Use _split_fname and _join_fname
+
 	* Frame/JCMT.pm: Can  use base class inout() method
 
 	* Recipe.pm (_check_obey_status_string): Handle { "mon" } syntax
